# ol-django

./: .gitattributes  .gitguardian.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  .travis.yml  AGENTS.md  BUILD  Dockerfile  README.md  apt.txt  conftest.py  coverage.yml  docker-compose.yml  ghc_instructions.md  mypy.ini  pants  pants.toml  pylintrc  pyproject.toml  renovate-config.json  renovate.json  requirements.build.txt  requirements.test.txt  requirements.txt  setup.cfg  tasks.py
mitol-django-authentication/: .coveragerc  CHANGELOG.md  mypy.ini  pyproject.toml  pytest.ini
mitol-django-authentication/mitol/authentication/: apps.py
mitol-django-authentication/testapp/: README.md  models.py  urls.py
mitol-django-authentication/testapp/settings/: example.dev.py  shared.py  test.py
mitol-django-authentication/tests/views/: test_saml.py
mitol-django-common/: .coveragerc  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
mitol-django-common/mitol/common/: apps.py  envs.py  models.py  models_test.py  pytest_utils.py  test_utils.py  test_utils_test.py  utils_test.py
mitol-django-common/testapp/: README.md
mitol-django-common/testapp/settings/: shared.py
mitol-django-common/tests/: test_envs.py  test_utils.py
mitol-django-common/tests/templates/: test_render_bundle.py
mitol-django-common/tests/utils/: test_collections.py  test_currency.py  test_datetime.py  test_urls.py  test_webpack.py
mitol-django-digital-credentials/: .coveragerc  CHANGELOG.md  README.md  conftest.py  mypy.ini  pyproject.toml
mitol-django-digital-credentials/mitol/digitalcredentials/: admin.py  apps.py  backend.py  backend_test.py  factories.py  mixins.py  models.py  models_test.py  serializers.py  serializers_test.py  settings.py  urls.py  views.py  views_test.py
mitol-django-digital-credentials/testapp/: README.md  conftest.py  factories.py  integration.py  models.py  models_test.py  serializers_test.py  urls.py  views.py  views_test.py
mitol-django-digital-credentials/testapp/migrations/: 0002_add_courseware_learner.py  0003_courseware_learner_not_null.py
mitol-django-digital-credentials/testapp/settings/: example.dev.py  shared.py  test.py
mitol-django-digital-credentials/tests/: test_backend.py  test_models.py  test_serializers.py  test_views.py
mitol-django-mail/: .coveragerc  CHANGELOG.md  mypy.ini  pyproject.toml  pytest.ini
mitol-django-mail/mitol/mail/: api_test.py  defaults.py  messages.py  test_utils.py  test_utils_test.py  urls.py
mitol-django-mail/testapp/: README.md  messages.py
mitol-django-mail/testapp/settings/: shared.py
src/api_versioning/: CHANGELOG.md  README.md  pyproject.toml
src/api_versioning/changelog.d/: scriv.ini
src/apigateway/: CHANGELOG.md  README-channels.md  README-routing.md  README.md  pyproject.toml
src/apigateway/changelog.d/: 20250312_091435_jkachel_6663_add_apisix_middleware.md  20250410_144423_jkachel_add_test_helpers_for_apigateway.md  20250414_152653_jkachel_add_apigateway_test_helper.md  20250418_220318_somebody_update_env_vars.md  20250424_170346_nlevesq_fix_apigateway_username.md  20250425_151315_nlevesq_atomic_backend_authenticate.md  20250805_112625_annagav_add_override_flag.md  20250814_130101_nlevesq.md  20251022_132511_nlevesq.md  20260429_003456_somebody_changelog.md  20260706_140955_blarghmatey.md
src/authentication/: BUILD  CHANGELOG.md  README.md  __init__.py  apps.py  pyproject.toml
src/authentication/changelog.d/: 20250109_124247_arslan.abdulrauf.md  20250317_083551_nlevesq_python_3_13.md  20250328_144901_nlevesq_add_ol_django_scim.md  20260408_173713_nlevesq_remove_py310.rst  20260702_162732_nlevesq_remove_touchstone_support.md  scriv.ini
src/authentication/settings/: touchstone.py
src/common/: BUILD  CHANGELOG.md  README.md  __init__.py  envs.py  pyproject.toml
src/common/changelog.d/: 20230222_201908_rhysyngsun_use_scriv_2.md  20230526_074341_rhysyngsun_add_env_crontab.md  20230623_172601_rhysyngsun_unpin_pytest.md  20240423_165722_collin_preston_2116_improve_resilience_of_posthog_integration_1.md  20250306_141559_nlevesq_add_ol_django_scim.md  20250506_102349_collinp_pre_commit_ci_update_config.md  20250520_110559_nlevesq_scim_push.md  20250620_121737_areebsajjad21_7460_update_changelog_for_username_functionality.md  20250731_160143_asad.ali_django_redis_6_x.md  20250819_163705_areebsajjad21_fix_nonetype_handling.md  20251218_180611_areeb.sajjad_9423_handle_number_only_usernames.md  (+7 more)
src/digitalcredentials/: BUILD  CHANGELOG.md  admin.py  factories.py  pyproject.toml  requests_utils.py
src/drf_lint/: .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
src/geoip/: CHANGELOG.md  CHANGELOG.rst  README.md  pyproject.toml
src/google_sheets/: BUILD  CHANGELOG.md  README.md  __init__.py  pyproject.toml  views.py
src/google_sheets_refunds/: BUILD  CHANGELOG.md  README.md  pyproject.toml
src/hubspot_api/: BUILD  CHANGELOG.md  README.md  api.py  models.py  pyproject.toml
src/keycloak/: CHANGELOG.md  README.md  pyproject.toml
src/mail/: CHANGELOG.md  __init__.py  api.py  forms.py  pyproject.toml  urls.py
src/mitol-django-digital-credentials/: BUILD  conftest.py  pylintrc  pyproject.toml  pytest.ini
src/oauth_toolkit_extensions/: BUILD  CHANGELOG.md  README.md  factories.py  pyproject.toml
src/observability/: README.md  pyproject.toml
src/olposthog/: BUILD  CHANGELOG.md  README.md  pyproject.toml
src/openedx/: BUILD  CHANGELOG.md  README.md  __init__.py  pyproject.toml
src/payment_gateway/: BUILD  CHANGELOG.md  README-CyberSourceSA.md  README-Stripe.md  README.md  pyproject.toml
src/scim/: CHANGELOG.md  README.md  pyproject.toml
src/transcoding/: CHANGELOG.md  README.md  pyproject.toml
src/uvtestapp/: CHANGELOG.md  README.md  pyproject.toml
testapp/: manage.py  pyproject.toml
testapp/libraries/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
testapp/main/: admin.py  factories.py  integration.py  messages.py  models.py  serializers.py  urls.py  utils.py  views.py  wsgi.py
testapp/users/: models.py
(+819 files in other folders)
