[project]
name = "ol-django"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MIT Open Learning Engineering", email = "odl-devops@mit.edu" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
generate-hashes = true
dev-dependencies = [
    "GitPython",
    "bumpver",
    "click",
    "click-log",
    "cloup",
    "coverage<=7.6.1",
    "dj-database-url",
    "django-stubs[compatible-mypy]",
    "factory-boy~=3.2",
    "faker>=4.17.1",
    "freezegun==1.0.0",
    "ipdb",
    "mypy",
    "mypy-extensions",
    "psycopg2-binary",
    "pytest>=8.3.3",
    "pytest-cov>=4.0.0",
    "pytest-django==3.10.0",
    "pytest-lazy-fixtures>=1",
    "pytest-mock==1.10.1",
    "responses==0.12.1",
    "ruff",
    "scriv[toml]",
    "semver",
    "toml",
    "typing-extensions",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.workspace]
members = ["src/*"]

[tool.rye.scripts]
build = { call = "mitol.build_support.cli:cli", env = {PYTHONPATH = "build-support/bin/"}}

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.pytest.ini_options]
addopts = "--cov . --cov-report term --cov-report html --cov-report xml --reuse-db"
norecursedirs = ".git .tox .* CVS _darcs {arch} *.egg dist"
DJANGO_SETTINGS_MODULE = "testapp.settings.test"
# -- recommended but optional:
python_files = ["tests/mitol/**/test_*.py"]
pythonpath = ["tests", "src"]

[tool.django-stubs]
django_settings_module = "testapp.settings.test"

[tool.mypy]
namespace_packages = true
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main"
]

[[tool.mypy.overrides]]
module = [
  "mypy-factory.*",
  "mypy-freezegun.*",
  "mypy-pytest.*",
  "mypy-oauth2_provider.*",
  "mypy-responses.*",
  "mypy-anymail.*",
  "mypy-bs4.*",
  "mypy-premailer.*",
  "mypy-toolz.*",
  "mypy-dj_database_url.*",
]


[tool.ruff]
target-version = "py38"
line-length = 88
lint.select = [
    "A",  # flake8-builtins
    # "AIR",  # Airflow
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    # "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    # "DJ",  # flake8-django
    "DTZ",  # flake8-datetimez
    "E",  # Pycodestyle Error
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    # "FURB",  # refurb
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "N",  # pep8-naming
    # "NPY",  # NumPy-specific rules
    # "PD",  # pandas-vet
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    # "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Pycodestyle Warning
    "YTT",  # flake8-2020
]
lint.ignore = [
    "B008",
    "B905",
    "D104",
    "D200",
    "D202",
    "D205",
    "D301",
    "D400",
    "N803",
    "N806",
    "N999",
    "PIE804",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "UP007"
]
lint.typing-modules = ["colour.hints"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"test_*.py" = ["S101"]
