[project]
name = "mitol-django-api-versioning"
version = "2026.3.24"
description = "MIT Open Learning Django API versioning framework with transform-based backwards compatibility"
dependencies = [
  "django>=3.0",
  "djangorestframework>=3.14",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"

[tool.bumpver]
current_version = "2026.3.24"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/api_versioning/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
