[project]
name = "mitol-django-authentication"
description = "MIT Open Learning django app extensions for oauth toolkit"
version = "2023.12.19"
dependencies = [
  "mitol-django-common"
]

[tool.bumpver]
current_version = "2023.12.19"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
