[project]
name = "mitol-django-authentication"
description = "MIT Open Learning django app extensions for oauth toolkit"
version = "2025.3.17"
dependencies = [
  "mitol-django-common",
  "django-anymail>=6.0",
  "django-stubs>=1.13.1",
  "django>=3.0",
  "djangorestframework>=3.0.0",
  "djoser==2.3.1",
  "mitol-django-common",
  "mitol-django-mail",
  "social-auth-app-django>=5.4.0",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"

[project.optional-dependencies]
touchstone = [
  'python3-saml>=1.10.1; python_version < "3.13"'
]


[tool.bumpver]
current_version = "2025.3.17"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/authentication/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
