[project]
name = "mitol-django-digitalcredentials"
version = "2023.12.19"
description = "Django application to support digital credentials"
dependencies = [
"django-oauth-toolkit>=1.3.3",
"django-stubs>=1.13.1",
"django>=3.0",
"djangorestframework>=3.0.0",
"factory-boy~=3.2",
"mitol-django-common",
"requests>=2.20.0",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"

[tool.bumpver]
current_version = "2023.12.19"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/digitalcredentials/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
