[project]
name = "mitol-drf-lint"
version = "2025.3.27"
description = "LibCST-based linting rules for DRF serializers — detects ORM queries causing N+1"
authors = [
    { name = "MIT Open Learning Engineering", email = "odl-devops@mit.edu" }
]
license = "BSD-3-Clause"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "libcst>=1.0,<2",
]

[project.scripts]
drf-lint = "mitol.drf_lint.cli:main"

[project.urls]
Repository = "https://github.com/mitodl/ol-django"

[tool.bumpver]
current_version = "2025.3.27"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/drf_lint/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
