[project]
name = "mitol-django-geoip"
version = "2025.3.17"
description = "Django application to handle IP-based geolocation"
dependencies = [
"django-stubs>=1.13.1",
"django>=3.0",
"factory-boy~=3.2",
"faker>=4.17.1",
"mitol-django-common"
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"

[tool.bumpver]
current_version = "2025.3.17"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/geoip/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
