[project]
name = "mitol-django-google-sheets"
version = "2025.2.4"
description = "Core library to handle Google Sheets integrations in Django"
dependencies = [
"django-stubs>=1.13.1",
"django>=3.0",
"factory-boy~=3.2",
"google-api-python-client>=2.0",
"google-auth-oauthlib>=0.5.2",
"google-auth>=2.0",
"mitol-django-common",
"pygsheets==2.0.2",
"pytz>=2020.4",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"

[tool.bumpver]
current_version = "2025.2.4"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/google_sheets/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
