[project]
name = "mitol-django-hubspot-api"
version = "2025.9.16"
description = "Django application for Hubspot API integration"
dependencies = [
"django-stubs>=1.13.1",
"django>=3.0",
"djangorestframework>=3.0.0",
"factory-boy~=3.2",
"hubspot-api-client==12.0.0",
"mitol-django-common",
"requests>=2.20.0",
"urllib3>=1.26.5",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"

[tool.bumpver]
current_version = "2025.9.16"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/hubspot_api/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
