[project]
name = "mitol-django-keycloak"
description = "MIT Open Learning django app extensions for keycloak integration"
version = "2026.7.13"
dependencies = [
  "django>=4.2",
  "pydantic",
  "python-keycloak>=7.1.1,<8",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "factory-boy~=3.2",
  "pytest>=9,<10",
]

[tool.bumpver]
current_version = "2026.7.13"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/keycloak/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
