[project]
name = "mitol-django-mail"
version = "2025.3.17"
description = "MIT Open Learning django app extensions for mail"
dependencies = [
"beautifulsoup4>=4.6.0",
"django-anymail>=6.0",
"django-stubs>=1.13.1",
"django>=3.0",
"html5lib>=1.1",
"mitol-django-common",
"premailer>=3.7.0",
"toolz>=0.10.0",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"

[tool.bumpver]
current_version = "2025.3.17"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/mail/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py", "**/templates/**/*"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
