[project]
name = "mitol-django-oauth-toolkit-extensions"
version = "2025.3.17"
description = "MIT Open Learning django app extensions for oauth toolkit"
dependencies = [
"django-oauth-toolkit>=1.3.3",
"django-stubs>=1.13.1",
"django>=3.0",
"factory-boy~=3.2",
"mitol-django-common",
"pytz>=2020.4",
"requests>=2.20.0",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"

[tool.bumpver]
current_version = "2025.3.17"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/oauth_toolkit_extensions/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
