[project]
name = "mitol-django-olposthog"
version = "2025.3.17"
description = "MIT Open Learning django app extensions for Posthog."
dependencies = [
"django-stubs>=1.13.1",
"django>=3.0",
"mitol-django-common",
"posthog>=3.5.0",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"

[tool.bumpver]
current_version = "2025.3.17"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/olposthog/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
